Update for multiple editor support

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <h3>Print plugin for Summernote</h3>
     <p>This plugin allows summernote prints its document, not whole web page.</p>
   </div>
+  <div class="summernote">
+    <p>A matter of course, no problem with multiple editors.</p>
+  </div>
 </body>
 </html>
-
