Update with bower

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
   <meta charset="utf-8">
   <title>Example page of print plugin for Summernote</title>
 
-  <!-- include summernote -->
-  <script src="http://summernote.org/bower_components/jquery/dist/jquery.js"></script>
-  <link href="http://summernote.org/bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
-  <script src="http://summernote.org/bower_components/bootstrap/dist/js/bootstrap.js"></script>
-  <link href="http://summernote.org/bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
+  <script src="./bower_components/jquery/dist/jquery.js"></script>
 
-  <link rel="stylesheet" href="http://summernote.org/bower_components/summernote/dist/summernote.css">
-  <script type="text/javascript" src="http://summernote.org/bower_components/summernote/dist/summernote.js"></script>
+  <script src="./bower_components/popper.js/dist/umd/popper.js"></script>
 
-  <script type="text/javascript" src="./summernote-ext-print.js"></script>
+  <link href="./bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
+  <script src="./bower_components/bootstrap/dist/js/bootstrap.js"></script>
+
+  <link rel="stylesheet" href="./bower_components/summernote/dist/summernote-bs4.css">
+  <script type="text/javascript" src="./bower_components/summernote/dist/summernote-bs4.js"></script>
+
+  <script type="text/javascript" src="./bower_components/summernote-ext-print/summernote-ext-print.js"></script>
 
   <script type="text/javascript">
     $(function() {
@@ -40,6 +41,7 @@
     <h3>Print plugin for Summernote</h3>
     <p>This plugin allows summernote prints its document, not whole web page.</p>
   </div>
+  <hr>
   <div class="summernote">
     <p>A matter of course, no problem with multiple editors.</p>
   </div>
