--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
   <h1>Example page of print plugin for Summernote</h1>
-  <p>Find on <a href="https://github.com/lqez/summernote-ext-print">github</a></p>
+  <p>Find this plugin on <a href="https://github.com/lqez/summernote-ext-print">GitHub</a></p>
   <div class="summernote">
     <h3>Print plugin for Summernote</h3>
     <p>This plugin allows summernote prints its document, not whole web page.</p>
